[package]
name = "mesher"
version = "0.1.0"
authors = ["Nic Hartley <nic@cybers.eco>"]
edition = "2018"

[[bin]]
name = "mesher-node"
required-features = ["binaries"]

[[example]]
name = "send"
required-features = ["binaries"]

[[example]]
name = "recv"
required-features = ["binaries"]

[features]
default = []
binaries = []
c_api = []

[dependencies]
