[package]
name = "mesher"
version = "0.0.1"
authors = ["Nic Hartley <nic@cybers.eco>"]
edition = "2018"
description = "A library to make anonymized mesh networking easier."
license = "BSD-3-Clause-Clear"
repository = "https://github.com/nic-hartley/mesher"

[[bin]]
name = "mesher-node"
required-features = ["binaries"]

[[example]]
name = "send"
required-features = ["binaries"]

[[example]]
name = "recv"
required-features = ["binaries"]

[features]
default = []
binaries = []
c_api = []

[dependencies]
ring = "0.16.9"
x25519-dalek = "0.6.0"
# ed25519-dalek = "0.9.1"
