[package]
name = "mesher"
version = "0.1.0"
authors = ["Nic Hartley <nic@cybers.eco>"]
edition = "2018"
description = "A library to make anonymized mesh networking easier."
license = "BSD-3-Clause-Clear"
repository = "https://github.com/nic-hartley/mesher"

[[bin]]
name = "mesher-node"
required-features = ["binaries"]

[[example]]
name = "send"
required-features = ["binaries"]

[[example]]
name = "receive"
required-features = ["binaries"]

[[example]]
name = "mocked"
required-features = ["debug"]

[features]
default = []
debug = ["lazy_static"]
binaries = ["debug"]
c_api = []

[dependencies]
ring = "0.16.9"
x25519-dalek = "0.6.0"
ed25519-dalek = "1.0.0-pre.3"
itertools = "0.8.2"
rand = "0.7.3"
serde = "1.0.104"
bincode = "1.2.1"
lazy_static = { version = "1.4.0", optional = true }
