[package]
name = "mesher"
version = "0.0.9"
authors = ["Nic Hartley <nic@cybers.eco>"]
edition = "2018"
description = "A library to make anonymized mesh networking easier."
license = "BSD-3-Clause-Clear"
repository = "https://github.com/nic-hartley/mesher"

[features]
default = []
c_api = []

[dependencies]
ring = "0.16.9"
x25519-dalek = "0.6.0"
ed25519-dalek = "1.0.0-pre.3"
curve25519-dalek = "2.0.0"
rand = "0.7.3"
serde = "1.0.104"
bincode = "1.2.1"
lazy_static = "1.4.0"
