[package]
name = "mesher"
version = "0.1.0"
authors = ["Nic Hartley <nic@cybers.eco>"]
edition = "2018"
description = "A library to make anonymized mesh networking easier."
license = "BSD-3-Clause-Clear"
repository = "https://github.com/nic-hartley/mesher"

[features]
default = []
c_api = []

[dependencies]
sodiumoxide = "0.2.5"
rand = "0.7.3"
serde = "1.0.104"
bincode = "1.2.1"
lazy_static = "1.4.0"
